--- a/tldh.html
+++ b/tldh.html
@@ -86,36 +86,36 @@
 
     </script><h2>温  馨  提  示：所有平台 仅供娱乐 禁止赌博<a style="color:#00EC00"></a></h2>
     <marquee style="position: absolute;top: 50px;left:100%;
-          margin-left: -100%;color:org;font-size: 26px; width: 100%; line-height:26px;color:#FF0000">官方正版平台  杜绝盗版  请认准官方导航</marquee>
+          左边距：-100%；颜色：org；字体大小：26px；宽度：100%； line-height:26px;color:#FF0000">官方正版平台杜绝盗版请认准官方导航margin-left: -100%;color:org;font-size: 26px; width: 100%; line-height:26px;color:#FF0000">官方正版平台  杜绝盗版  请认准官方导航</marquee>
     <h2></h2>
-    <h2> 24小时稳定授权 链接进不去稍等自动更新 </h2>
+    24小时稳定授权链接进不去稍等自动更新 <h2> 24小时稳定授权 链接进不去稍等自动更新 </h2>
     <!-- <h2 style="color:#00EC00"></h2> -->
-<script>    
-               function onBridgeReady(){
+<script><脚本>    
+               函数 onBridgeReady ( ) {
  
-              WeixinJSBridge.call("hideOptionMenu");
- 
-              }
- 
-              if (typeof WeixinJSBridge == "undefined"){
- 
-              if( document.addEventListener ){
- 
-              document.addEventListener("WeixinJSBridgeReady", onBridgeReady, false);
- 
-              }else if (document.attachEvent){
- 
-              document.attachEvent("WeixinJSBridgeReady", onBridgeReady);
- 
-              document.attachEvent("onWeixinJSBridgeReady", onBridgeReady);
+              微信JSBridge。调用（“隐藏选项菜单” ）；
  
               }
  
-              }else{
+              if  ( typeof  WeixinJSBridge == "未定义"){"undefined"){
  
-              onBridgeReady();
+              if( 文档.addEventListener ){if( document.addEventListener ){
  
-              }
+              document.addEventListener("WeixinJSBridgeReady", onBridgeReady, false);document.addEventListener("WeixinJSBridgeReady", onBridgeReady, false);
+ 
+              }否则如果（文档.attachEvent）{}else if (document.attachEvent){
+ 
+              document.attachEvent("WeixinJSBridgeReady", onBridgeReady);document.attachEvent("WeixinJSBridgeReady", onBridgeReady);
+ 
+              document.attachEvent("onWeixinJSBridgeReady", onBridgeReady);document.attachEvent("onWeixinJSBridgeReady", onBridgeReady);
+ 
+              }}
+ 
+              }别的{}else{
+ 
+              onBridgeReady();onBridgeReady();
+ 
+              }}
  
     </script>
 
@@ -128,7 +128,8 @@
                 <img src="static/picture/logo.png" alt="">
                 极速<div><font color="#FF0000">极速</font></div>
 				光明大圣
-<div>光明大圣<br></div>
+<div>光明大圣
+<br></div>
 			</a>
 
             </a>
@@ -148,7 +149,7 @@
             
             <div class="btn-actions">
                  测试图<a style="background-color:#6495ED;" class="btn-play" href="/static/file/xds.jpg">测试图</a>
-<a立即试玩style="background-color:#2894FF;" class="btn-play" href="http://dhx.xds.ap-hongkong.yy.xe.dg-ssj.com">立即试玩</a>
+<a立即试玩style立即试玩</a>
 
                 <a class="btn-play btn-copy" href="javascript:" data-clipboard-text="
 光明大圣
@@ -164,7 +165,7 @@ http://dhx.xds.ap-hongkong.kjnt-22222222-200564-6-1329384522.sh.run.xe.zjacbc.co
 开俱乐部防止捣乱1
 仅供娱乐测试，禁止赌博！
 
-">">复制链接</a>
+">">">复制链接</a>
 
             </div>
    
@@ -325,7 +326,7 @@ http://dhx.xss.ap-hongkong.kjnt-22222222-200564-6-1329384522.sh.run.xe.zjacbc.co
                 <div></div>
                 
                 <div><font color="FF0000"><font color="#95F204"> 
-<div>最新导航2025.10.5更新
+<div>最新导航2025.12.11更新
 </div>
 复制使用
 【连接进不去的显示浏览器访问的找上级重新拿连接】
